--- a/SoundCortexSTM.ioc
+++ b/SoundCortexSTM.ioc
@@ -1,10 +1,12 @@
 #MicroXplorer Configuration settings - do not modify
 File.Version=6
 I2C1.DualAddressMode=I2C_DUALADDRESS_ENABLE
+I2C1.GeneralCallMode=I2C_GENERALCALL_ENABLE
 I2C1.I2C_Speed_Mode=I2C_Fast_Plus
-I2C1.IPParameters=I2C_Speed_Mode,Timing,DualAddressMode,OwnAddress,OwnAddress2
-I2C1.OwnAddress=0x50
-I2C1.OwnAddress2=0x51
+I2C1.IPParameters=I2C_Speed_Mode,Timing,DualAddressMode,OwnAddress,OwnAddress2,GeneralCallMode
+I2C1.IPParametersWithoutCheck=OwnAddress2,OwnAddress
+I2C1.OwnAddress=PSG_ADDRESS
+I2C1.OwnAddress2=SCC_ADDRESS
 I2C1.Timing=0x00000001
 I2S1.AudioFreq=I2S_AUDIOFREQ_48K
 I2S1.ErrorAudioFreq=0.8 %
@@ -36,10 +38,13 @@ Mcu.UserName=STM32F042K6Tx
 MxCube.Version=5.0.0
 MxDb.Version=DB.5.0.0
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false
+NVIC.I2C1_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false
+PA10.GPIOParameters=GPIO_FMA10
+PA10.GPIO_FMA10=SYSCFG_CFGR1_I2C_FMP_PA10
 PA10.Mode=I2C
 PA10.Signal=I2C1_SDA
 PA4.Mode=Half_Duplex_Master
@@ -48,6 +53,8 @@ PA5.Mode=Half_Duplex_Master
 PA5.Signal=I2S1_CK
 PA7.Mode=Half_Duplex_Master
 PA7.Signal=I2S1_SD
+PA9.GPIOParameters=GPIO_FMA9
+PA9.GPIO_FMA9=SYSCFG_CFGR1_I2C_FMP_PA9
 PA9.Mode=I2C
 PA9.Signal=I2C1_SCL
 PCC.Checker=false
