--- a/SoundCortexSTM.ioc
+++ b/SoundCortexSTM.ioc
@@ -51,11 +51,11 @@ MxCube.Version=5.0.0
 MxDb.Version=DB.5.0.0
 NVIC.DMA1_Channel2_3_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.I2C1_IRQn=true\:0\:0\:false\:false\:true\:true
+NVIC.I2C1_IRQn=true\:2\:0\:true\:false\:true\:true
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false
+NVIC.PendSV_IRQn=true\:2\:0\:true\:false\:true\:false
+NVIC.SVC_IRQn=true\:2\:0\:true\:false\:true\:false
+NVIC.SysTick_IRQn=true\:1\:0\:true\:false\:true\:false
 PA10.GPIOParameters=GPIO_FMA10
 PA10.GPIO_FMA10=SYSCFG_CFGR1_I2C_FMP_PA10
 PA10.Mode=I2C
